--- a/html/controlsboard.html
+++ b/html/controlsboard.html
@@ -34,6 +34,7 @@
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
   <script src="js/controlsboard.js"></script>
+  <script src="js/parser.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </body>
 
